<resources>
    <string name="app_name">TIPWARE Business Card</string>
    <string name="contact_number">tel:023619878790</string>
    <string-array name="time_array">
        <item>Opening Times</item>
        <item>Monday: 8:00 AM - 6:00 PM</item>
        <item>Tuesday: 8:00 AM - 5:30 PM</item>
        <item>Wednesday: 8:00 AM - 5:00 PM</item>
        <item>Thursday: 8:00 AM - 6:30 PM</item>
        <item>Friday: 8:00 AM - 5:00 PM</item>
        <item>Saturday: Closed</item>
        <item>Sunday: Closed</item>
    </string-array>

    <string name="first_text">TIPWARE Gmbh \nSoftware Development Company</string>
    <string name="second_text">Christine-Englerth-Str. 48,\n45665 Recklinghausen, Germay</string>
    <string name="call_button_text">CALL</string>
    <string name="email_button_text">EMAIL</string>
    <string name="website_button_text">WEBSITE</string>
    <string name="font_family_text">sans-serif light</string>
</resources>
