<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorParentBackground"
        android:orientation="vertical"

        tools:context="com.example.koloh.tipwarebusinesscard.MainActivity">


        <ImageView
            android:id="@+id/tipware_logo_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginBottom="@dimen/layout_margin_bottom_big"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:scaleType="centerCrop"
            android:src="@drawable/tipware_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_height"
            android:background="@color/colorOtherBackground" />


        <TextView
            android:id="@+id/first_text"
            android:text="@string/first_text"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:fontFamily="@string/font_family_text"
            style="@style/CustomTextViewStyle" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_height"
            android:background="@color/colorOtherBackground" />


        <TextView
            android:text="@string/second_text"
            android:fontFamily="@string/font_family_text"
            style="@style/CustomTextViewStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_height"
            android:layout_marginTop="@dimen/layout_margin_top_small"
            android:background="@color/colorOtherBackground" />

        <Spinner
            android:id="@+id/opening_time_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_right"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:textSize="@dimen/text_size" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_height"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:background="@color/colorOtherBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/call_button"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginRight="@dimen/layout_margin_right"
                android:drawableTop="@drawable/ic_call_icon"
                android:text="@string/call_button_text"
                style="@style/CustomizeButtonStyle" />

            <Button
                android:id="@+id/email_button"
                android:layout_marginLeft="@dimen/layout_margin_left_smaller"
                android:layout_toRightOf="@id/call_button"
                android:drawableTop="@drawable/ic_email"
                android:text="@string/email_button_text"
                style="@style/CustomizeButtonStyle" />

            <Button
                android:id="@+id/website_button"
                android:layout_marginLeft="@dimen/layout_margin_left_small"
                android:drawableTop="@drawable/ic_www"
                android:text="@string/website_button_text"
                style="@style/CustomizeButtonStyle" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>